--- a/source/Novicell.Examine.ElasticSearch.Umbraco.Forms/packages.config
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco.Forms/packages.config
@@ -2,15 +2,15 @@
 <packages>
   <package id="AngleSharp" version="0.9.11" targetFramework="net472" />
   <package id="CSharpTest.Net.Collections" version="14.906.1403.1082" targetFramework="net472" />
-  <package id="ClientDependency" version="1.9.9" targetFramework="net472" />
+  <package id="ClientDependency" version="1.9.10" targetFramework="net472" />
   <package id="ClientDependency-Mvc5" version="1.9.3" targetFramework="net472" />
   <package id="EPPlus" version="4.5.3.2" targetFramework="net472" />
   <package id="Examine" version="1.2.2" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.8.14" targetFramework="net472" />
   <package id="HtmlSanitizer" version="4.0.217" targetFramework="net472" />
   <package id="ImageProcessor" version="2.9.1" targetFramework="net472" />
-  <package id="UmbracoCms.Core" version="8.16.0" targetFramework="net472" />
-  <package id="UmbracoCms.Web" version="8.16.0" targetFramework="net472" />
+  <package id="UmbracoCms.Core" version="8.18.3-alpha.15245" targetFramework="net472" />
+  <package id="UmbracoCms.Web" version="8.18.3-alpha.15245" targetFramework="net472" />
   <package id="K4os.Compression.LZ4" version="1.2.12" targetFramework="net472" />
   <package id="LightInject" version="5.5.0" targetFramework="net472" />
   <package id="LightInject.Annotation" version="1.1.0" targetFramework="net472" />
@@ -43,7 +43,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net472" />
-  <package id="Microsoft.Owin" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Cookies" version="4.1.1" targetFramework="net472" />
@@ -52,11 +52,11 @@
   <package id="MiniProfiler" version="4.0.138" targetFramework="net472" />
   <package id="MiniProfiler.Shared" version="4.0.138" targetFramework="net472" />
   <package id="NPoco" version="3.9.4" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="Semver" version="2.0.4" targetFramework="net472" />
   <package id="Serilog.Settings.AppSettings" version="2.2.2" targetFramework="net472" />
-  <package id="SharpZipLib" version="0.86.0" targetFramework="net472" />
+  <package id="SharpZipLib" version="1.2.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
