--- a/source/Novicell.Examine.ElasticSearch.Umbraco.Forms/packages.config
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco.Forms/packages.config
@@ -9,8 +9,8 @@
   <package id="HtmlAgilityPack" version="1.8.14" targetFramework="net472" />
   <package id="HtmlSanitizer" version="4.0.217" targetFramework="net472" />
   <package id="ImageProcessor" version="2.9.1" targetFramework="net472" />
-  <package id="UmbracoCms.Core" version="8.18.3-alpha.15245" targetFramework="net472" />
-  <package id="UmbracoCms.Web" version="8.18.3-alpha.15245" targetFramework="net472" />
+  <package id="UmbracoCms.Core" version="8.18.3" targetFramework="net472" />
+  <package id="UmbracoCms.Web" version="8.18.3" targetFramework="net472" />
   <package id="K4os.Compression.LZ4" version="1.2.12" targetFramework="net472" />
   <package id="LightInject" version="5.5.0" targetFramework="net472" />
   <package id="LightInject.Annotation" version="1.1.0" targetFramework="net472" />
