--- a/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/packages.config
+++ b/source/Novicell.Examine.ElasticSearch.Umbraco.PDF/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ClientDependency-Mvc5" version="1.9.3" targetFramework="net472" />
-  <package id="UmbracoCms.Core" version="8.18.3-alpha.15245" targetFramework="net472" />
-  <package id="UmbracoCms.Web" version="8.18.3-alpha.15245" targetFramework="net472" />
+  <package id="UmbracoCms.Core" version="8.18.3" targetFramework="net472" />
+  <package id="UmbracoCms.Web" version="8.18.3" targetFramework="net472" />
   <package id="Examine" version="1.2.2" targetFramework="net472" />
   <package id="ImageProcessor" version="2.9.1" targetFramework="net472" />
   <package id="K4os.Compression.LZ4" version="1.2.12" targetFramework="net472" />
